# czehockey-player-pool-atlas

./: .gitignore  COVER_LETTER.md  FIRST_CALL_PREP.md  LICENSE  Makefile  PRODUCT.md  README.cs.md  README.md  pyproject.toml
config/: cluster_labels.yaml  feature_definitions.yaml  league_quality.yaml  leagues.yaml  nt_veterans.yaml
data/seed/: czech_eligible_players.csv
docs/: CNAME  index.html  style.css  video_poc_meta.json
docs/briefs/: filip-chytil.md  filip-hronek.md  jakub-frolo.md  jakub-krejcik.md  jiri-kulich.md  jiri-tichacek.md  marek-alscher.md  mikulas-hovorka.md  ondrej-kos.md  radek-kucerik.md  tomas-hertl.md  tomas-mazura.md
docs/cards/: filip-hronek.json  jiri-kulich.json
outputs/: style.css  video_poc_meta.json
outputs/briefs/: david-pastrnak.md  lukas-jasek.md  lukas-sedlak.md  martin-necas.md  matyas-kantner.md  michal-jordan.md  pavel-zacha.md  petr-kodytek.md  radek-faksa.md  radko-gudas.md  (+3 more)
src/: __init__.py  cluster.py  config.py  crosswalk.py  features_defense.py  features_forwards.py  features_goalies.py  fetch_extraliga.py  fetch_iihf.py  fetch_liiga.py  fetch_moneypuck.py  fetch_nhl.py  fetch_nl.py  fetch_shl.py  historical_analogs.py  international_benchmark.py  llm_scout.py  logging_setup.py  playwright_helper.py  reduce.py  render.py  sensitivity.py  trajectory.py  utils.py  vision_cards.py
templates/: exec_summary.html.j2  report.html.j2  style.css
tests/: conftest.py  test_config.py  test_crosswalk.py  test_extraliga_parser.py  test_features_forwards.py  test_fetch_outputs.py  test_iihf_parser.py  test_liiga_parser.py
(+2 files in other folders)
