[project]
name = "czehockey-player-pool-atlas"
version = "0.1.0"
description = "Position-normalized atlas of Czech-eligible professional hockey players. Methodology showcase, not selection recommendation."
authors = [{ name = "Barbora Sandova", email = "barbora@datasimply.eu" }]
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "pandas>=2.2,<3.0",
    "pyarrow>=16.0",
    "numpy>=1.26,<3.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "tenacity>=8.5",
    "rapidfuzz>=3.9",
    "pyyaml>=6.0",
    "scikit-learn>=1.5,<2.0",
    "umap-learn>=0.5.6",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "jinja2>=3.1",
    "playwright>=1.45",
    "weasyprint>=62.0",
    "anthropic>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"
